# cssr4Africa

cssr/: package.xml
cssr/robotLocalization/: ReadMe.md
cssr/robotLocalization/include/robotLocalization/: robotLocalizationInterface.h
cssr/robotLocalization/src/: robotLocalizationApplication.cpp  robotLocalizationImplementation.cpp
cssr/robotNavigation/src/: robotNavigationApplicationWorking.cpp  robotNavigationImplementation.cpp
cssr_system/: CMakeLists.txt
cssr_system/robotLocalization/: ReadMe.md  odometry_pose
cssr_system/robotLocalization/include/robotLocalization/: robotLocalizationInterface.h
cssr_system/robotLocalization/src/: robotLocalizationApplication.cpp  robotLocalizationImplementation.cpp
cssr_system/robotNavigation/: ReadMe.md
cssr_system/robotNavigation/config/: robotNavigationConfiguration.ini
cssr_system/robotNavigation/include/robot_navigation/: robotNavigationInterface.h
cssr_system/robotNavigation/src/: robotNavigationApplication.cpp  robotNavigationImplementation.cpp  robotNavigationImplementationFUnctional.cpp
unit_tests/: CMakeLists.txt  package.xml
unit_tests/exampleComponentTest/: CMakeLists.txt  README.md
unit_tests/exampleComponentTest/config/: exampleComponentTestConfiguration.ini
unit_tests/exampleComponentTest/include/exampleComponentTest/: exampleComponentTestInterface.h
unit_tests/exampleComponentTest/launch/: exampleComponentTestLaunchSimulator.launch
unit_tests/robotNavigationTest/: CMakeLists.txt
unit_tests/robotNavigationTest/config/: robotNavigationTestConfiguration.ini
unit_tests/robotNavigationTest/include/robotNavigationTest/: robotNavigationTestInterface.h
unit_tests/robotNavigationTest/launch/: robotNavigationTestLaunchRobot.launch
unit_tests/robotNavigationTest/src/: robotNavigationDriver copy.cpp  robotNavigationDriver.cpp  robotNavigationTestApplication.cpp  robotNavigationTestImplementation.cpp
